# covid-random

./: README.md  pyproject.toml
covid_random/: covid_pandas.ipynb  france_covid.ipynb
tests/: test_covid_random.py
