[tool.poetry]
name = "covid-random"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Matthew Maxwell-Burton <matthewmaxwellburton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
scipy = "^1.4.1"
requests = "^2.23.0"
matplotlib = "^3.2.1"
jupyterlab = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
